...
                            }
                        }
                    }
                }
                .listStyle(.plain)
            }
            .navigationTitle("All Animals")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing){
                    Button {
                        showingAddView.toggle()
                    } label :{
                      Label("Add Animal", systemImage: "plus.circle")
                    }
                }
            }
            .sheet(isPresented: $showingAddView) {
                AddAnimalView()
            }
...
